ZE-Dodatkowe - dodano tekst w index.html

--- a/index.html
+++ b/index.html
@@ -112,111 +112,115 @@
     <section class="moreInfo" id="more">
       <div class="moreInfo__title">Dowiedz się więcej</div>
       <div class="moreInfo__wrapper">
-      <div class="moreInfoBox">
-        <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon--1">
-            <i class="fas fa-piggy-bank"></i>
+        <div class="moreInfoBox">
+          <div data-aos="fade-right">
+            <div class="moreInfo__icon moreIcon--1">
+              <i class="fas fa-piggy-bank"></i>
+            </div>
+            <div class="moreInfo__header">
+              Promocje
+            </div>
+            <p>Koniec z wymówkami, że jak zdrowo to zaraz drogo! Tylko u nas możesz zdobyć atrakcyjne kody rabatowe do
+              restauracji jak również do sklepów ze zdrową żywnością. </p>
+            <p>Mało tego - jeśli zapiszesz się na nasz Newsletter otrzymasz na start 10% rabatu na nasz
+              asortyment! </p>
+            <p>Nie przegap takiej okazji!</p>
           </div>
-          <div class="moreInfo__header">
-            Promocje
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-left">
+            <div class="moreInfo__icon moreIcon--2">
+              <i class="fas fa-shopping-bag"></i>
+            </div>
+            <div class="moreInfo__header">
+              Kupuj lokalnie
+            </div>
+            <p>Masz dosyć przetworzonej żywności? Po powrocie ze sklepu nie dają Ci spokoju myśli czy jajka były z chowu
+              klatkowego, a chleb nie spędził w zamrażarce pół roku? </p>
+            <p>Razem z nami wspieraj lokalnych producentów. Kupując u nas wspierasz nie tylko lokalny biznes i ochronę
+              środowiska, ale przede wszystkim swoje zdrowie.</p>
           </div>
-          <p>Koniec z wymówkami, że jak zdrowo to zaraz drogo! Tylko u nas możesz zdobyć atrakcyjne kody rabatowe do
-            restauracji jak również do sklepów ze zdrową żywnością. </p>
-          <p>Mało tego - jeśli zapiszesz się na nasz Newsletter otrzymasz na start 10% rabatu na nasz
-            asortyment! </p>
-          <p>Nie przegap takiej okazji!</p>
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-right">
+            <div class="moreInfo__icon moreIcon--3">
+              <i class="fas fa-leaf"></i>
+            </div>
+            <div class="moreInfo__header">
+              Ekologia
+            </div>
+            <p>
+              Na zdrowej żywności nie poprzestajemy. Stosujemy wysokiej jakości jednorazowe, ekologiczne opakowania do
+              przewozu zamówień. Są to
+              przyjazne dla środowiska, w pełni biodegradowalne produkty.
+            </p>
+          </div>
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-left">
+            <div class="moreInfo__icon moreIcon--4">
+              <i class="fas fa-users"></i>
+            </div>
+            <div class="moreInfo__header">
+              Nasi eksperci
+            </div>
+            <p>Masz wątpliwości, który produkt spełni najlepiej Twoje oczekiwania? Którą restaurację wybrać albo które
+              mleko roślinne jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów! Nasz Zespół
+              Ci doradzi, najlepiej jak potrafi.
+          </div>
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-right">
+            <div class="moreInfo__icon moreIcon--5">
+              <i class="fas fa-envelope"></i>
+            </div>
+            <div class="moreInfo__header">
+              Bądź na bieżąco!
+            </div>
+            <p>Zapisując się na Newsletter masz pewność, że na bieżąco będziemy Cię informować o wszystkich nowinkach
+              żywieniowych, wydarzeniach kulinarnych w Trójmieście oraz o promocjach.</p>
+
+          </div>
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-left">
+            <div class="moreInfo__icon moreIcon--6">
+              <i class="fas fa-mobile-alt"></i>
+            </div>
+            <div class="moreInfo__header">
+              Aplikacja ZdrowEat
+            </div>
+            <p>Nasza aplikacja jest prosta w obsłudze, a co najważniejsze - zupełnie darmowa! Czekaj na powiadomienie na
+              maila. Damy Ci znać zaraz po jej premierze.</p>
+          </div>
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-right">
+            <div class="moreInfo__icon moreIcon--7">
+              <i class="fas fa-handshake"></i>
+            </div>
+            <div class="moreInfo__header">
+              Poznajmy się
+            </div>
+            <p>Organizujemy warsztaty i spotkania kulinarne! Jeśli jesteś ZdrowoManiakiem polub nas na facebooku, śledź
+              Newsletter i koniecznie przyjdź na jedno ze spotkań!</p>
+          </div>
+        </div>
+        <div class="moreInfoBox">
+          <div data-aos="fade-left">
+            <div class="moreInfo__icon moreIcon--8">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <div class="moreInfo__header">
+              Bezpieczeństwo
+            </div>
+            <p>W tym trudnym czasie związanym z epidemią, staramy się Wam wyjśc na przeciw. Nie rezygnując ze zdrowych
+              przyzwyczajeń, nadal możesz zamawiać produkty w naszym sklepie i jedzenie na wynos - zapewniamy zachowanie
+              wszelkich zaleceń sanitarnych </p>
+
+          </div>
         </div>
       </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon--2">
-            <i class="fas fa-shopping-bag"></i>
-          </div>
-          <div class="moreInfo__header">
-            Kupuj lokalnie
-          </div>
-          <p>Masz dosyć przetworzonej żywności? Po powrocie ze sklepu nie dają Ci spokoju myśli czy jajka były z chowu
-            klatkowego, a chleb nie spędził w zamrażarce pół roku? </p>
-          <p>Razem z nami wspieraj lokalnych producentów. Kupując u nas wspierasz nie tylko lokalny biznes i ochronę środowiska, ale przede wszystkim swoje zdrowie.</p>
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon--3">
-            <i class="fas fa-leaf"></i>
-          </div>
-          <div class="moreInfo__header">
-            Ekologia
-          </div>
-          <p>
-            Na zdrowej żywności nie poprzestajemy. Stosujemy wysokiej jakości jednorazowe, ekologiczne opakowania do
-            przewozu zamówień. Są to
-            przyjazne dla środowiska, w pełni biodegradowalne produkty.
-          </p>
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon--4">
-            <i class="fas fa-users"></i>
-          </div>
-          <div class="moreInfo__header">
-            Nasi eksperci
-          </div>
-          <p>Masz wątpliwości, który produkt spełni najlepiej Twoje oczekiwania? Którą restaurację wybrać albo które mleko roślinne jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów! Nasz Zespół
-          Ci doradzi, najlepiej jak potrafi.
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon--5">
-            <i class="fas fa-envelope"></i>
-          </div>
-          <div class="moreInfo__header">
-            Bądź na bieżąco!
-          </div>
-          <p>Zapisując się na Newsletter masz pewność, że na bieżąco będziemy Cię informować o wszystkich nowinkach
-            żywieniowych, wydarzeniach kulinarnych w Trójmieście oraz o promocjach.</p>
-          <p>Nie zwlekaj, zapisz się na Newsletter!</p>
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon--6">
-            <i class="fas fa-mobile-alt"></i>
-          </div>
-          <div class="moreInfo__header">
-            Aplikacja ZdrowEat
-          </div>
-          <p>Nasza aplikacja jest prosta w obsłudze, a co najważniejsze - zupełnie darmowa! Czekaj na powiadomienie na maila. Damy Ci znać zaraz po jej premierze.</p> 
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-right">
-          <div class="moreInfo__icon moreIcon--7">
-            <i class="fas fa-handshake"></i>
-          </div>
-          <div class="moreInfo__header">
-            Poznajmy się
-          </div>
-          <p>Organizujemy warsztaty i spotkania kulinarne! Jeśli jesteś ZdrowoManiakiem polub nas na facebooku, śledź
-            Newsletter i koniecznie przyjdź na jedno ze spotkań!</p>
-        </div>
-      </div>
-      <div class="moreInfoBox">
-        <div data-aos="fade-left">
-          <div class="moreInfo__icon moreIcon--8">
-            <i class="fas fa-shield-alt"></i>
-          </div>
-          <div class="moreInfo__header">
-            Bezpieczeństwo
-          </div>
-          <p>W tym trudnym czasie związanym z epidemią, staramy się Wam wyjśc na przeciw. Nie rezygnując ze zdrowych
-            przyzwyczajeń, nadal możesz zamawiać produkty w naszym sklepie i jedzenie na wynos - zapewniamy zachowanie wszelkich zaleceń sanitarnych </p>
-        
-        </div>
-      </div>
-    </div>
     </section>
     ​
     <section class="aboutUs" id="about">
