--- a/index.html
+++ b/index.html
@@ -343,19 +343,19 @@
           ​
           <section class="newsletter__input name">
             <label class="sr-only" for="name"></label>
-            <input type="text" name="name" id="name" data-msg-rewuired="Proszę wpisać imię." value placeholder="Imię" />
+            <input type="text" class="input" name="name" id="name" data-msg-rewuired="Proszę wpisać imię." value placeholder="Imię" />
           </section>
           <section class="newsletter__input mail">
             <label class="sr-only" for="mail"></label>
-            <input type="text" name="mail" id="mail" data-msg-rewuired="Proszę wpisać adres e-mail." value
+            <input type="text" class="input" name="mail" id="mail" data-msg-rewuired="Proszę wpisać adres e-mail." value
               placeholder="E-mail" />
           </section>
           <div class="newsletter__input box">
-          <input type="checkbox" name="my-checkbox" id="opt-in">
+          <input type="checkbox" class="input" name="my-checkbox" id="opt-in">
           <label for="opt-in">Wyrażam zgodę na otrzymywanie informacji handlowych drogą elektroniczną na podany powyżej adres poczty elektronicznej wysyłanych przez ZdrowEat</label>
         </div>
           <section class="newsletter__input submission">
-            <input type="submit" value="Wyślij" class="btn btn-default btn-block" data-loading-text="Loading..." />
+            <input type="submit" value="Wyślij" class="btn btn-default " data-loading-text="Loading..." />
           </section>
         </div>
         ​
