ZE-AboutUs- dodano tekst

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pl">
 ​
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="variables.css" />
   <link rel="stylesheet" href="fontawesome/css/all.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
   <title>Zdroweat</title>
 </head>
 ​
+
 <body>
   <div id="dom"></div>
   <nav class="menu">
@@ -30,7 +32,7 @@
       </li>
     </ul>
   </nav>
-​
+  ​
   <div class="hero__wrapper">
     <header class="hero">
       <h1 class="hero__title">ZdrowEat - Zdrowie jest cool!</h1>
@@ -40,7 +42,7 @@
       </div>
     </header>
   </div>
-  
+
   <div class="container" id="container">
     <section class="info" id="info">
       <div class="info__item info--1">
@@ -52,8 +54,8 @@
         </div>
         <p>
           Burger z pokrzywy? Pita z falafelem? Na miejscu, czy z dowozem?
-          Nasza interaktywna mapa pozwoli Ci znaleźć to, na co masz ochotę! 
-          U nas możesz szukać knajpek według lokalizacji lub po nazwie dania. 
+          Nasza interaktywna mapa pozwoli Ci znaleźć to, na co masz ochotę!
+          U nas możesz szukać knajpek według lokalizacji lub po nazwie dania.
           <br>Zdrowa kuchnia w Trójmieście nie ma przed nami żadnych tajemnic!
         </p>
       </div>
@@ -67,7 +69,7 @@
         <p>
           Każdy czasem chce coś ugotować sam. Kiedy w głowie pustka i pomysłów
           brak, ZdrowEat przychodzi z odsieczą! Sałatki, power bowle, burgery
-          roślinne -  u nas znajdziesz sprawdzone przepisy, dzięki którym
+          roślinne - u nas znajdziesz sprawdzone przepisy, dzięki którym
           Twoja dieta będzie smaczna i zbilansowana. <br>
           Gotój zdrowo - żyj zdrowo!
         </p>
@@ -83,7 +85,7 @@
           Znalazłeś już swój wymarzony przepis. Gotujesz. Smaki i aromaty tworzą
           idealną harmonię. Już tylko ostatnie składniki. Ale zaraz... Gdzie znaleźć
           płatki drożdżowe? Gdzie szukać mąki jaglanej? <br> W tej sekcji poznasz odpowiedzi
-          na te pytania. <br> Sklepy ze zdrową żywnością w Trójmieście - tylko 
+          na te pytania. <br> Sklepy ze zdrową żywnością w Trójmieście - tylko
           na ZdrowEat!
         </p>
       </div>
@@ -96,8 +98,8 @@
         </div>
         <p>
           Sklep zamknęli Ci przed nosem? Trwa wojna lub pandemia? Nie łam się -
-           sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów BIO od sprawdzonych dostawców. 
-          Jesteśmy czynni 24h na dobę, 7 dni w tygodniu dostawy realizujemy bezpłatnie w ciągu 
+          sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów BIO od sprawdzonych dostawców.
+          Jesteśmy czynni 24h na dobę, 7 dni w tygodniu dostawy realizujemy bezpłatnie w ciągu
           1 doby od zamówienia. <br> Sprawdź nas!
         </p>
       </div>
@@ -168,7 +170,7 @@
         </div>
       </div>
     </section>
-​
+    ​
     <section class="aboutUs" id="about">
       <div class="aboutUs__content content--1">
         <div data-aos="flip-left">
@@ -178,11 +180,9 @@
           KARINA MIERNIK
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-          velit magni quo consequuntur doloremque corporis ipsum et tenetur
-          blanditiis? Pariatur maxime qui soluta est ipsa, itaque totam sunt
-          modi eos!
-        </p>
+          Na codzień projektuję odnawialne źródła energii. </p>
+        <p> Osobiście zaś uwielbiam podróżować, spać pod namiotem, malować (obrazy), a szczytem marzeń jest wieczór
+          z dobrą książką i kubkiem gorącej czekolady</p>
         <div class="aboutUs__social">
           <a href="https://www.facebook.com/" class="social__facebook">
             <i class="fab fa-facebook"></i>
@@ -193,7 +193,7 @@
           <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
       <div class="aboutUs__content content--2">
@@ -204,10 +204,11 @@
           PAULINA MALINOWSKA
         </div>
         <p>
-          Inżynier przygody, który na codzień nadzoruje budynki z betonu, a w wolnej chwili ogląda tajlandzkie seriale i rysuje przystojnych panów. Totalny freak fantastyki spędzający większą część dnia w obłokach.
+          Inżynier przygody, który na codzień nadzoruje budynki z betonu, a w wolnej chwili ogląda tajlandzkie seriale i
+          rysuje przystojnych panów. Totalny freak fantastyki spędzający większą część dnia w obłokach.
         </p>
         <div class="aboutUs__social">
-​          <a href="https://www.facebook.com/" class="social__facebook">
+          ​ <a href="https://www.facebook.com/" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
           <a href="https://www.instagram.com/" class="social__instagram">
@@ -216,7 +217,7 @@
           <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
       <div class="aboutUs__content content--3">
@@ -233,7 +234,7 @@
           modi eos!
         </p>
         <div class="aboutUs__social">
-​          <a href="https://www.facebook.com/" class="social__facebook">
+          ​ <a href="https://www.facebook.com/" class="social__facebook">
             <i class="fab fa-facebook"></i>
           </a>
           <a href="https://www.instagram.com/" class="social__instagram">
@@ -242,7 +243,7 @@
           <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
       <div class="aboutUs__content content--4">
@@ -268,17 +269,17 @@
           <a href="https://www.twitter.com/" class="social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
-​
+          ​
         </div>
       </div>
     </section>
-​
+    ​
     <footer class="newsletter" id="news">
       <div class="newsletter__wrapper">
-​
+        ​
         <div class="newsletter__input">
           <p>Zapisz się do Newslettera!</p>
-​
+          ​
           <section class="newsletter__input name">
             <label class="sr-only" for="name"></label>
             <input type="text" name="name" id="name" data-msg-rewuired="Proszę wpisać imię." value placeholder="Imię" />
@@ -292,23 +293,24 @@
             <input type="submit" value="Wyślij" class="btn btn-default btn-block" data-loading-text="Loading..." />
           </section>
         </div>
-​
+        ​
         <div class="newsletter__top">
           <a href="#top" class="newsletter__top__item">
-              <i class="fas fa-arrow-circle-up">  GO UP</i>
+            <i class="fas fa-arrow-circle-up"> GO UP</i>
           </a>
+        </div>
       </div>
-      </div>
-​
-      
-​
-      </div>
-    </footer>
+      ​
+
+      ​
   </div>
-​
+  </footer>
+  </div>
+  ​
   <script>
     AOS.init();
   </script>
 </body>
 ​
+
 </html>
