--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </nav>
     <div class="hero__wrapper">
       <header class="hero">
-        <div class="hero__title"><img class="logo" src="Identyfikacja/logo_1.png" alt=""></div>
+        <div class="hero__title">
+          <img class="logo" src="Identyfikacja/logo_1.png" alt="" />
+        </div>
         <div class="hero__button">
           <button type="button" class="btn btn-outline-dark btn-lg">
             <a href="#news" class="link__button">Zapisz się</a>
@@ -326,30 +328,88 @@
             </a>
           </div>
         </div>
-      </div>
-    </section>
-    <footer class="newsletter" id="news">
-      <!-- <div class="newsletter__wrapper">  -->
-        <div class="newsletter__wrapper">
-          <div class="newsletter__title"><p>Zapisz się do Newslettera!</p>
+        <div class="aboutUs__content content--4">
+          <div data-aos="flip-left">
+            <div class="photo photo--4"></div>
           </div>
-          <p>Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi informacjami dotyczącymi aplikacji. </p> <p>Biorąc udział w zapisie uzyskasz przedpremierowy dostęp do  ZdrowEat!</p>
+          <div class="aboutUs__name">
+            MACIEJ LANGOWSKI
+          </div>
+          <p>
+            Projektant konstrukcji stalowych. <br />Prywatnie - fan niezdrowego
+            jedzenia, który pod wpływem nacisków i rosnącej masy ciała szuka
+            smakowitych alternatyw dla ociekających tłuszczem mięsiw.
+          </p>
+          <div class="aboutUs__social">
+            <a href="https://www.facebook.com/" class="social__facebook">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/" class="social__instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.twitter.com/" class="social__twitter">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+        </div>
+      </section>
+      <footer class="newsletter" id="news">
+        <!-- <div class="newsletter__wrapper">  -->
+        <div class="newsletter__wrapper">
+          <div class="newsletter__title"><p>Zapisz się do Newslettera!</p></div>
+          <p>
+            Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi
+            informacjami dotyczącymi aplikacji.
+          </p>
+          <p>
+            Biorąc udział w zapisie uzyskasz przedpremierowy dostęp do ZdrowEat!
+          </p>
 
           <section class="newsletter__input name">
             <label class="sr-only" for="name"></label>
-            <input type="text" class="input" name="name" id="name" data-msg-rewuired="Proszę wpisać imię." value placeholder="Imię" />
+            <input
+              type="text"
+              class="input"
+              name="name"
+              id="name"
+              data-msg-rewuired="Proszę wpisać imię."
+              value
+              placeholder="Imię"
+            />
           </section>
           <section class="newsletter__input mail">
             <label class="sr-only" for="mail"></label>
-            <input type="text" class="input" name="mail" id="mail" data-msg-rewuired="Proszę wpisać adres e-mail." value
-              placeholder="E-mail" />
+            <input
+              type="text"
+              class="input"
+              name="mail"
+              id="mail"
+              data-msg-rewuired="Proszę wpisać adres e-mail."
+              value
+              placeholder="E-mail"
+            />
           </section>
           <div class="newsletter__input box">
-          <input type="checkbox" class="input" name="my-checkbox" id="opt-in">
-          <label for="opt-in">Wyrażam zgodę na otrzymywanie informacji handlowych drogą elektroniczną na podany powyżej adres poczty elektronicznej wysyłanych przez ZdrowEat</label>
-        </div>
+            <input
+              type="checkbox"
+              class="input"
+              name="my-checkbox"
+              id="opt-in"
+            />
+            <label for="opt-in"
+              >Wyrażam zgodę na otrzymywanie informacji handlowych drogą
+              elektroniczną na podany powyżej adres poczty elektronicznej
+              wysyłanych przez ZdrowEat</label
+            >
+          </div>
           <section class="newsletter__input submission">
-            <input type="submit" value="Wyślij" class="btn btn-default " data-loading-text="Loading..." />
+            <input
+              type="submit"
+              value="Wyślij"
+              class="btn btn-default"
+              data-loading-text="Loading..."
+            />
           </section>
         </div>
 
@@ -358,12 +418,12 @@
             <i class="fas fa-arrow-circle-up"> Do góry</i>
           </a>
         </div>
-      <!-- </div>  -->
-  </footer>
-  </div>
+        <!-- </div>  -->
+      </footer>
+    </div>
 
-  <script>
-    AOS.init();
-  </script>
-</body>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
