last changes to index.html

--- a/index.html
+++ b/index.html
@@ -267,13 +267,16 @@
             gorącej czekolady
           </p>
           <div class="aboutUs__social">
-            <a href="https://www.facebook.com/" class="social__facebook">
+            <a href="https://www.facebook.com/" class="social social__facebook">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/" class="social__instagram">
+            <a
+              href="https://www.instagram.com/"
+              class="social social__instagram"
+            >
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.twitter.com/" class="social__twitter">
+            <a href="https://www.twitter.com/" class="social social__twitter">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
@@ -292,13 +295,16 @@
             obłokach.
           </p>
           <div class="aboutUs__social">
-            <a href="https://www.facebook.com/" class="social__facebook">
+            <a href="https://www.facebook.com/" class="social social__facebook">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/" class="social__instagram">
+            <a
+              href="https://www.instagram.com/"
+              class="social social__instagram"
+            >
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.twitter.com/" class="social__twitter">
+            <a href="https://www.twitter.com/" class="social social__twitter">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
@@ -311,19 +317,22 @@
             MICHAŁ MARCHEWA
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            velit magni quo consequuntur doloremque corporis ipsum et tenetur
-            blanditiis? Pariatur maxime qui soluta est ipsa, itaque totam sunt
-            modi eos!
+            Technolog żywności. <br />
+            Pilnuję merytorycznej treści przekazywanych na stronie informacji.
+            Prywatnie uwielbiam sport (piłka nożna, tenis) i wszystko co
+            związane z awioniką.
           </p>
           <div class="aboutUs__social">
-            <a href="https://www.facebook.com/" class="social__facebook">
+            <a href="https://www.facebook.com/" class="social social__facebook">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/" class="social__instagram">
+            <a
+              href="https://www.instagram.com/"
+              class="social social__instagram"
+            >
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.twitter.com/" class="social__twitter">
+            <a href="https://www.twitter.com/" class="social social__twitter">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
@@ -341,17 +350,19 @@
             smakowitych alternatyw dla ociekających tłuszczem mięsiw.
           </p>
           <div class="aboutUs__social">
-            <a href="https://www.facebook.com/" class="social__facebook">
+            <a href="https://www.facebook.com/" class="social social__facebook">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/" class="social__instagram">
+            <a
+              href="https://www.instagram.com/"
+              class="social social__instagram"
+            >
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.twitter.com/" class="social__twitter">
+            <a href="https://www.twitter.com/" class="social social__twitter">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
-        </div>
         </div>
       </section>
       <footer class="newsletter" id="news">
