--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="tablet.css" />
+    <link rel="stylesheet" href="screen.css" />
     <link rel="stylesheet" href="variables.css" />
     <link rel="stylesheet" href="fontawesome/css/all.css" />
     <link
