wrapped navigation for mobile finished

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
   </head>
   <body>
     <nav class="menu">
-      <input class="menu__box" type="checkbox" id="menu__box" />
-      <label class="menu__icon" for="menu__box">
+      <input class="menu__btn" type="checkbox" id="menu__btn" />
+      <label class="menu__icon" for="menu__btn">
         <span class="nav__icon"></span>
       </label>
       <ul class="menu__list">
-        <li class="menu__button menu--home">
+        <li class="menu__item menu--home">
           <a href="#dom" class="link">HOME</a>
         </li>
-        <li class="menu__button menu--about">
+        <li class="menu__item menu--about">
           <a href="#container" class="link">O PROJEKCIE</a>
         </li>
-        <li class="menu__button menu--more">
+        <li class="menu__item menu--more">
           <a href="#more" class="link">WIĘCEJ</a>
         </li>
-        <li class="menu__button menu--us">
+        <li class="menu__item menu--us">
           <a href="#about" class="link">O NAS</a>
         </li>
       </ul>
