--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             placeholder="Imię" />
         </section>
         <section class="newsletter__input mail">
-          <i class="fa fa-envelope fa-2x"></i>
+          <i class="fa fa-envelope-open fa-2x"></i>
           <label class="sr-only" for="mail"></label>
           <input type="text" class="input" name="mail" id="mail" data-msg-rewuired="Proszę wpisać adres e-mail." value
             placeholder="E-mail" />
