ZE-AboutUs4 - korekta index.html

--- a/index.html
+++ b/index.html
@@ -20,24 +20,30 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Zdroweat</title>
   </head>
+
   <body>
-    <nav class="menu" id="dom">
+    <nav class="menu">
+      <input class="menu__btn" type="checkbox" id="menu__btn" />
+      <label class="menu__icon" for="menu__btn">
+        <span class="nav__icon"></span>
+      </label>
       <ul class="menu__list">
-        <li class="menu__button menu--home">
+        <li class="menu__item menu--home">
           <a href="#dom" class="link">HOME</a>
         </li>
-        <li class="menu__button menu--about">
+        <li class="menu__item menu--about">
           <a href="#container" class="link">O PROJEKCIE</a>
         </li>
-        <li class="menu__button menu--more">
+        <li class="menu__item menu--more">
           <a href="#more" class="link">WIĘCEJ</a>
         </li>
-        <li class="menu__button menu--us">
+        <li class="menu__item menu--us">
           <a href="#about" class="link">O NAS</a>
         </li>
       </ul>
     </nav>
-    <div class="hero__wrapper">
+
+    <div class="hero__wrapper" id="dom">
       <header class="hero">
         <img class="logo" src="Identyfikacja/logo_1.png" alt="" />
         <div class="hero__button">
@@ -366,9 +372,10 @@
         </div>
       </section>
       <footer class="newsletter" id="news">
-        <!-- <div class="newsletter__wrapper">  -->
         <div class="newsletter__wrapper">
-          <div class="newsletter__title"><p>Zapisz się do Newslettera!</p></div>
+          <div class="newsletter__title">
+            <p>Zapisz się do Newslettera!</p>
+          </div>
           <p>
             Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi
             informacjami dotyczącymi aplikacji.
@@ -378,6 +385,7 @@
           </p>
 
           <section class="newsletter__input name">
+            <i class="fa fa-user"></i>
             <label class="sr-only" for="name"></label>
             <input
               type="text"
@@ -390,6 +398,7 @@
             />
           </section>
           <section class="newsletter__input mail">
+            <i class="fa fa-envelope-open"></i>
             <label class="sr-only" for="mail"></label>
             <input
               type="text"
@@ -418,7 +427,7 @@
             <input
               type="submit"
               value="Wyślij"
-              class="btn btn-default"
+              class="newsletter__button"
               data-loading-text="Loading..."
             />
           </section>
