ZE-Formularz3 - dodanie diva

--- a/index.html
+++ b/index.html
@@ -368,13 +368,13 @@
         </p>
 
         <section class="newsletter__input name">
-          <i class="fa fa-user"></i>
+          <div class="newsletter__icon"> <i class="fa fa-user"></i></div>
           <label class="sr-only" for="name"></label>
           <input type="text" class="input" name="name" id="name" data-msg-rewuired="Proszę wpisać imię." value
             placeholder="Imię" />
         </section>
         <section class="newsletter__input mail">
-          <i class="fa fa-envelope-open"></i>
+          <div class="newsletter__icon"> <i class="fa fa-envelope-open"></i></div>
           <label class="sr-only" for="mail"></label>
           <input type="text" class="input" name="mail" id="mail" data-msg-rewuired="Proszę wpisać adres e-mail." value
             placeholder="E-mail" />
