ZE-AboutUs-5 - Dodano ikonkę strony domowej

--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
           <a href="https://www.twitter.com/" class="social social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social social__homepage">
+            <i class="fas fa-home"></i>
+          </a>
         </div>
       </div>
       <div class="aboutUs__content content--2">
@@ -301,6 +304,9 @@
           </a>
           <a href="https://www.twitter.com/" class="social social__twitter">
             <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social social__homepage">
+            <i class="fas fa-home"></i>
           </a>
         </div>
       </div>
@@ -327,6 +333,9 @@
           <a href="https://www.twitter.com/" class="social social__twitter">
             <i class="fab fa-twitter"></i>
           </a>
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social social__homepage">
+            <i class="fas fa-home"></i>
+          </a>
         </div>
       </div>
       <div class="aboutUs__content content--4">
@@ -350,6 +359,9 @@
           </a>
           <a href="https://www.twitter.com/" class="social social__twitter">
             <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social social__homepage">
+            <i class="fas fa-home"></i>
           </a>
         </div>
       </div>
