ZE-Dodatkowe3 - zmiana treści paragrafu

--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
           informacjami dotyczącymi aplikacji.
         </p>
         <p>
-          Biorąc udział w zapisie uzyskasz przedpremierowy dostęp do ZdrowEat!
+          Wyślemy Ci jednego maila z informacją, że możesz już korzystać z aplikacji ZdrowEat. Biorąc udział w zapisie
+          uzyskasz jak najszybszy dostęp do ZdrowEat!
         </p>
-
         <section class="newsletter__input name">
           <div class="newsletter__icon"> <i class="fa fa-user"></i></div>
           <label class="sr-only" for="name"></label>
