--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Zdrowie jest cool. Z nami zjesz smacznie, zdrowo i niestandardowo" />
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="tablet.css" />
   <link rel="stylesheet" href="screen.css" />
