--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
   <div class="hero__wrapper" id="dom">
     <header class="hero">
-      <img class="logo" src="Identyfikacja/logo_1.png" alt="" />
+      <img class="logo" src="Identyfikacja/logo_1.png" alt="logo" />
+      <h2>Witamy w świecie zdrowej żywności. Pragniemy przedstawić Ci aplikację dzięki której pozostaniesz super fit, a zjedzenie burgera z pokrzywy nie będzie dla Ciebie wyzwaniem! Nie czekaj! Kliknij w przycisk poniżej by zapisać się do naszego Newsleterra! <br>Niech moc kukurydzy będzie z Tobą!</h2>
       <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg">
           <a href="#news" class="link__button">Zapisz się</a>
