dodanie efektu fade-down

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="hero__wrapper" id="dom">
     <header class="hero">
       <div class="hero__logo"><img class="logo" src="Identyfikacja/logo_1.png" alt="logo" /></div>
-      <div class="hero__intro"><h2>Witamy w świecie zdrowej żywności! Pragniemy przedstawić Ci aplikację, dzięki której zostaniesz kulinarnym fit guru, a zjedzenie burgera z pokrzywy nie będzie dla Ciebie wyzwaniem! Nie czekaj! Kliknij w przycisk poniżej by zapisać się do naszego Newsleterra! <br>Niech moc kukurydzy będzie z Tobą!</h2></div>
+      <div data-aos="fade-down" class="hero__intro"><h2>Witamy w świecie zdrowej żywności! Pragniemy przedstawić Ci aplikację, dzięki której zostaniesz kulinarnym fit guru, a zjedzenie burgera z pokrzywy nie będzie dla Ciebie wyzwaniem! Nie czekaj! Kliknij w przycisk poniżej by zapisać się do naszego Newsleterra! <br>Niech moc kukurydzy będzie z Tobą!</h2></div>
       <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg">
           <a href="#news" class="link__button">Zapisz się</a>
